# tripoll

./: CMakeLists.txt
include/: algorithm.hpp  ordered_directed_graph.hpp  undirected_graph.hpp
src/: adj_list_tc.cpp  rmat_degree_distribution.cpp  rmat_tc.cpp  tsv_tc.cpp  undirected_graph_test.cpp
